# ghems

./: .env  .env.development  .gitignore  Cargo.toml  Dockerfile  Notes.md  build.sh  generate-dynimports.py
backup/dynimports/: Cargo.toml
backup/ghems-macro/: Cargo.toml
clientapp/: package-lock.json  package.json  webpack.dev.js
crates/anyhow/: Cargo.toml
crates/argon2/: Cargo.toml
crates/async-trait/: Cargo.toml
crates/axum/: Cargo.toml
crates/axum-macros/: Cargo.toml
crates/base64/: Cargo.toml
crates/clap/: Cargo.toml
crates/dashmap/: Cargo.toml
crates/dotenvy/: Cargo.toml
crates/dynimports/: Cargo.toml
crates/dynimports/src/: lib.rs
crates/jsonwebtoken/: Cargo.toml
crates/mimalloc/: Cargo.toml
crates/once_cell/: Cargo.toml
crates/rand/: Cargo.toml
crates/serde/: Cargo.toml
crates/serde_json/: Cargo.toml
crates/sha2/: Cargo.toml
crates/sqlx/: Cargo.toml
crates/thiserror/: Cargo.toml
crates/time/: Cargo.toml
crates/tokio/: Cargo.toml
crates/tower-http/: Cargo.toml
crates/tracing/: Cargo.toml
crates/tracing-subscriber/: Cargo.toml
crates/uuid/: Cargo.toml
crates/validator/: Cargo.toml
ghems-client/: Notes.md  package-lock.json  package.json
ghems-client/src/: App.tsx  global.scss  index.tsx
migrations/: template.sql
migrations/1.setup-db/: down.sql  up.sql
src/: clientapp.rs  config.rs  error.rs  main.rs  router.rs
src/api/: auth.rs  mod.rs
src/db/: mod.rs  user_account.rs  user_role.rs
src/extractors/: auth.rs  mod.rs  oauth.rs  roles.rs
src/models/: mod.rs  role.rs  user.rs
src/utils/: cow.rs  (+6 more)
(+81 files in other folders)
