[package]
name = "dynimports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.61"
argon2 = { version = "0.4.1", features = ["rayon"] }
async-trait = "0.1.57"
axum = { version = "0.5" }
axum-macros = "0.2.3"
base64 = "0.13.0"
clap = { version = "3.2.17", features = ["env", "derive"] }
dashmap = { version = "5.3.4", features = ["rayon", "serde"] }
dotenvy = { version = "0.15.1", features = ["clap"] }
jsonwebtoken = "8.1.1"
mimalloc = "0.1.29"
once_cell = "1.13.0"
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sha2 = "0.10.2"
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
thiserror = "1.0.32"
time = { version = "0.3.13", features = ["serde"] }
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["std", "env-filter"] }
uuid = { version = "1.1.2", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
